# stagecoach

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  stagecoach_manifest.yml
notebooks/: checks.qmd  cli.qmd  customs.qmd  inspect_manifest.qmd  issue_manifest.qmd  manifest.qmd  manifest_checker.qmd  outpost.qmd  stage.qmd  stagecoach.qmd  ui.qmd
src/stagecoach/: __init__.py  checks.py  cli.py  customs.py  issue_manifest.py  manifest.yml  manifest_checker.py  outpost.py  stage.py  stagecoach.py  ui.py  validate_manifest.py
src/stagecoach/templates/: manifest.yml
user_guide/notebooks/: checks.md  cli.md  customs.md  issue_manifest.md  manifest.md  manifest_checker.md  outpost.md  stage.md  stagecoach.md  ui.md  validate_manifest.md
